# hello-nix2poetry

./: default.nix  flake.nix  pyproject.toml
hello/: __init__.py  openapi.yaml
nix/: sources.json
