[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["edelagnier <erica.delagnier@multi.coop>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
connexion = {extras = ["swagger-ui", "uvicorn"], version = "^3.1.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hello = "hello:main"
